kubernetes/mcaptcha/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcaptcha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcaptcha
  template:
    metadata:
      labels:
        app: mcaptcha
    spec:
      serviceAccountName: mcaptcha
      terminationGracePeriodSeconds: 10
      containers:
      - name: mcaptcha
        image: quay.io/opentelekomcloud/mcaptcha
        ports:
        - containerPort: 7001
        command: ["/bin/bash", "-c"]
        args:
          - 'source /secrets/mcaptcha-env && /usr/local/bin/mcaptcha'
        volumeMounts:
          - name: "secrets"
            mountPath: "/secrets"
        resources:
          requests:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /api/v1/meta/health
            port: 7001
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/v1/meta/health
            port: 7001
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
        - name: "vault-agent-config"
          configMap:
            name: "mcaptcha-vault-config"
        - name: "secrets"
          emptyDir: {}
        - name: "k8-tokens"
          projected:
            sources:
              - serviceAccountToken:
                  path: "vault-token"
                  expirationSeconds: 7200
